--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,25 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Java Spring Boot
+/target/
+*.iml
+*.ipr
+*.iws
+.idea/
+
+# Gradle
+.gradle/
+build/
+!gradle/wrapper/gradle-wrapper.jar
+
+# Ignore bmad-core, .cursor, and web-bundles folders
+.bmad-core/
+.cursor/
+web-bundles/
+
+# Ignore local configuration files
+**/application-local.yml
+
+/docs/
