--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'java-library'
     id 'maven-publish'
     id 'signing'
+    id 'jacoco'
     id 'io.github.gradle-nexus.publish-plugin' version '1.3.0'
 }
 
@@ -67,7 +68,46 @@ test {
     }
     // Increase heap for ArchUnit tests
     maxHeapSize = "1G"
+    
+    // Enable JaCoCo coverage
+    finalizedBy jacocoTestReport
 }
+
+// JaCoCo Configuration
+jacoco {
+    toolVersion = "0.8.11"
+}
+
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.required = true
+        csv.required = false
+        html.required = true
+    }
+    
+    afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: [
+                '**/config/**',
+                '**/*Test*',
+                '**/*IT*'
+            ])
+        }))
+    }
+}
+
+jacocoTestCoverageVerification {
+    violationRules {
+        rule {
+            limit {
+                minimum = 0.80  // 80% coverage requirement
+            }
+        }
+    }
+}
+
+check.dependsOn jacocoTestCoverageVerification
 
 // Javadoc Configuration
 javadoc {
