feat: Prepare FlowStep Framework v1.0.0 for Maven Central release
 Maven Central Release Preparation:
- Updated project URLs for consistency (flowstep-framework)
- Enhanced descriptions in starter build.gradle files
- Added comprehensive release preparation task
- Fixed Java 8 compatibility in Spring Boot 2 example
- Updated .gitignore for publishing artifacts

 Added comprehensive documentation:
- Library development guide and checklist
- Build template for users
- Migration steps and guides
- API reference and usage documentation

 Build improvements:
- Added prepareRelease task with validation
- Enhanced POM metadata with proper descriptions
- Configured Maven Central publishing pipeline
- Fixed URL consistency across all modules

 Maven Central Requirements Met:
- GPG signatures
- Source and Javadoc JARs
- Complete POM metadata
- Proper group ID (net.xrftech)
- All validation checks passing

Ready for Maven Central publication!

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,28 @@ web-bundles/
 **/application-local.yml
 
 # /docs/ - Documentation is now tracked
+
+# Maven Central Publishing Artifacts
+maven-central-bundle/
+*.properties.central-portal
+*.properties.new
+*.properties.template
+
+# PowerShell Scripts (temporary)
+complete-bundle.ps1
+create-fresh-bundle.ps1
+fix-pom-validation.ps1
+generate-checksums.ps1
+generate-signatures.ps1
+regenerate-pom-checksums.ps1
+
+# GPG and Signing
+*.asc
+*.gpg
+secring.gpg
+
+# Checksums
+*.md5
+*.sha1
+*.sha256
+*.sha512
