--- a/flowstep-spring-boot-3-starter/build.gradle
+++ b/flowstep-spring-boot-3-starter/build.gradle
@@ -1,5 +1,5 @@
 // FlowStep Spring Boot 3 Starter - Java 17+ Support
-description = 'FlowStep Spring Boot Starter for Spring Boot 3.x+ and Java 17+'
+description = 'FlowStep Spring Boot Starter for Spring Boot 3.x+ and Java 17+ - Clean CQRS framework implementing Template Method pattern for maintainable, step-based business logic execution'
 
 // Java configuration (will use system Java)
 java {
